GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/Insurance_Refund_Form__c.object-meta.xml
<CustomObject>
    <description>ECC Form</description>
    <label>Insurance Refund Form</label>
    <nameField>
        <label>Insurance Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Refund Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>