GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/fields/Booking_Channel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Channel__c</fullName>
    <defaultValue>&quot;Online&quot;</defaultValue>
    <label>Booking Channel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>