GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Refund Forms</relationshipLabel>
    <relationshipName>Insurance_Refund_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>