GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/fields/New_departure_date__c.field-meta.xml
<CustomField>
    <fullName>New_departure_date__c</fullName>
    <description>to update to the new travel date.</description>
    <label>New departure date</label>
    <type>Date</type>
</CustomField>