GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/fields/New_Insurance_Reference__c.field-meta.xml
<CustomField>
    <fullName>New_Insurance_Reference__c</fullName>
    <label>New Insurance Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>