GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/fields/New_Train_Reference__c.field-meta.xml
<CustomField>
    <fullName>New_Train_Reference__c</fullName>
    <label>New Train Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>