GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/fields/Original__c.field-meta.xml
<CustomField>
    <fullName>Original__c</fullName>
    <label>Original Train Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>