GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/fields/Reason_For_Refund__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Refund__c</fullName>
    <label>Reason For Refund / Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>14 Day Cool-Off</fullName>
            </value>
            <value>
                <fullName>Exchanged ticket</fullName>
            </value>
            <value>
                <fullName>Death In Family</fullName>
            </value>
            <value>
                <fullName>Double Booking</fullName>
            </value>
            <value>
                <fullName>Customer / System Error</fullName>
            </value>
            <value>
                <fullName>Cooling off period</fullName>
            </value>
            <value>
                <fullName>Train departure date amended</fullName>
            </value>
            <value>
                <fullName>Train amended: New price bracket</fullName>
            </value>
            <value>
                <fullName>Train departure time amended</fullName>
            </value>
            <value>
                <fullName>Train cancelledTrain Cancelled/Hotel Closed</fullName>
                <label>Train Cancelled/Hotel Closed</label>
            </value>
            <value>
                <fullName>Package amended</fullName>
            </value>
            <value>
                <fullName>Duplicate booking</fullName>
            </value>
            <value>
                <fullName>Name change</fullName>
            </value>
            <value>
                <fullName>Flexible Package</fullName>
            </value>
            <value>
                <fullName>Other (Please Put Reason In Notes Section)</fullName>
            </value>
            <value>
                <fullName>Train cancelled</fullName>
                <isActive>false</isActive>
                <label>Train cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>