GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <label>Refund Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>