GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/fields/Refund_Currency__c.field-meta.xml
<CustomField>
    <fullName>Refund_Currency__c</fullName>
    <label>Refund Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>