GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket Number</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Insurance Refund Forms</relationshipLabel>
    <relationshipName>Insurance_Refund_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>