GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/recordTypes/Insurance_Exchange.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Exchange</fullName>
    <active>true</active>
    <label>Insurance Exchange</label>
</RecordType>