GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/recordTypes/Insurance_Refund.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Refund</fullName>
    <active>true</active>
    <label>Insurance Refund</label>
</RecordType>