GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/validationRules/Cash_Exchange_fields_become_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Cash_Exchange_fields_become_mandatory</fullName>
    <active>false</active>
    <description>Cash Exchange fields become mandatory once the Cash Exchange option is selected from Action dropdown</description>
    <errorConditionFormula>(RecordType.Name = &quot;Insurance Exchange&quot;) &amp;&amp;
ISBLANK(  New_Train_Reference__c )</errorConditionFormula>
    <errorMessage>Please enter the Cash Exchange information</errorMessage>
</ValidationRule>