GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/validationRules/Insurance_Reference_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_Reference_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
CONTAINS(Name, &quot;ESTGB&quot;)
||
CONTAINS(Name, &quot;ESTFR&quot;)
||
CONTAINS(Name, &quot;ESTBE&quot;)
||
CONTAINS(Name, &quot;ESTNL&quot;)
||
CONTAINS(Name, &quot;ESPBE&quot;)
||
CONTAINS(Name, &quot;ESPGB&quot;)
||
CONTAINS(Name, &quot;ESPFR&quot;)
||
CONTAINS(Name, &quot;ESPNL&quot;)
)</errorConditionFormula>
    <errorMessage>Incorrect format for Insurance Reference. The reference must start with either:
&quot;ESTGB&quot;
&quot;ESTFR&quot;
&quot;ESTBE&quot;
&quot;ESTNL&quot;
&quot;ESPBE&quot;
&quot;ESPGB&quot;
&quot;ESPFR&quot;
&quot;ESPNL&quot;</errorMessage>
</ValidationRule>