GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/validationRules/Insurance_Reference_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_Reference_Length</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name)&lt;&gt;15</errorConditionFormula>
    <errorMessage>Insurance reference needs to be 15 characters long</errorMessage>
</ValidationRule>