GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/validationRules/Notes_Field_Mandatory_if_Reason_is_other.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_Field_Mandatory_if_Reason_is_other</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Reason_For_Refund__c , &quot;Other (Please Put Reason In Notes Section)&quot;) 
&amp;&amp; 
ISBLANK( Notes__c )</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>Please put reason for refund into the notes box</errorMessage>
</ValidationRule>