GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/validationRules/Refund_fields_become_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_fields_become_mandatory</fullName>
    <active>true</active>
    <description>Refund fields become mandatory once the Refund option is selected from Action dropdown</description>
    <errorConditionFormula>(RecordType.Name = &quot;Insurance Refund&quot;) &amp;&amp;
(ISPICKVAL( Refund_Currency__c, &quot;&quot;) 
||
ISNULL(  Refund_Amount__c ))</errorConditionFormula>
    <errorMessage>Please enter the refund information</errorMessage>
</ValidationRule>