GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Date_of_Purchase__c</columns>
    <columns>Action__c</columns>
    <columns>Reason_For_Refund__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>