GearsetPOC/force-app/main/default/objects/Insurance_Refund_Form__c/listViews/Cash_Exchanges.listView-meta.xml
<ListView>
    <fullName>Cash_Exchanges</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Date_of_Purchase__c</columns>
    <columns>Action__c</columns>
    <columns>Reason_For_Refund__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Cash Exchange</value>
    </filters>
    <label>Cash Exchanges</label>
    <language>en_US</language>
</ListView>